2012-11-06 Markus Malkusch <markus@malkusch.de>

    * Autoloader/fileIterator/AutoloaderFileIterator_Simple (AutoloaderFileIterator_Simple):
    Using PHP's RecursiveDirectoryIterator.

2012-11-04 Markus Malkusch <markus@malkusch.de>

    * Autoloader/index/AutoloaderIndex_File (AutoloaderIndex_File):
    Added option to change the file permissions of the index file.

2012-09-15 Markus Malkusch <markus@malkusch.de>

    * Autoloader/Autoloader.php (Autoloader):
    Moved into namespace malkusch\autoloader

2012-09-14 Markus Malkusch <markus@malkusch.de>

    * Autoloader.php:
    Renamed Autoloader.php into autoloader.php

2012-09-11 Markus Malkusch <markus@malkusch.de>

    * Autoloader/parser/AutoloaderFileParser_Tokenizer.php (AutoloaderFileParser_Tokenizer::getClassesInSource()):
    Added support for PHP 5.4's traits.

2012-06-09 Markus Malkusch <markus@malkusch.de>

    * Autoloader/InstantAutoloader.php (InstantAutoloader::__autoload()):
    InstantAutoloader comes with class constructor support.

2012-04-02 Markus Malkusch <markus@malkusch.de>

    * Autoloader/fileIterator/AutoloaderFileIterator_Simple.php (AutoloaderFileIterator_Simple::valid()):
    Skip unreadable file nodes.

2011-05-17 Markus Malkusch <markus@malkusch.de>

    * scripts/autoloader-build.php (AutoloaderBuildScript):
    Added script for deploying an InstantAutoloader in a project.

2011-05-06 Markus Malkusch <markus@malkusch.de>

    * Autoloader/index/AutoloaderIndex_File.php (AutoloaderIndex_File::saveRaw()):
    File based index's rights are set readable for everyone.

    * Autoloader/Autoloader.php (Autoloader::buildIndex()):
    Dominik Niehus reported a bug in Autoloader::buildIndex().
    AbstractAutoloader::normalizeClass() should also be used during building
    the index.

    * Autoloader/AutoloaderConfiguration.php (AutoloaderConfiguration::setConfigurationFile()):
    You may set a custom configuration file.

    * Autoloader/InstantAutoloader.php (InstantAutoloader):